--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,11 @@
     </repository>
     <repository>
       <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
+      <url>https://jitpack.io/</url>
     </repository>
     <repository>
       <id>rayzr-repo</id>
-      <url>https://cdn.rawgit.com/Rayzr522/maven-repo/master/</url>
+      <url>https://rayzr.dev/repo/</url>
     </repository>
   </repositories>
 
@@ -110,7 +110,7 @@
     <dependency>
       <groupId>me.rayzr522</groupId>
       <artifactId>jsonmessage</artifactId>
-      <version>1.0.0</version>
+      <version>1.2.0</version>
     </dependency>
   </dependencies>
 </project>
