--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,11 @@
 
   <name>${project.artifactId}</name>
   <description>Azisaba ticket GUI</description>
-  <url>https://github.com/${project.organization.name}/${project.artifactId}</url>
+
+  <url>https://azisaba.net</url>
   <organization>
     <name>siloneco</name>
-    <url>https://azisaba.net</url>
+    <url>https://github.com/siloneco</url>
   </organization>
 
   <properties>
@@ -19,7 +20,7 @@
   </properties>
 
   <build>
-    <finalName>${project.artifactId}</finalName>
+    <finalName>${project.name}</finalName>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
@@ -30,7 +31,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>3.8.1</version>
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
@@ -39,7 +40,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <phase>package</phase>
