--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,30 @@
             <goals>
               <goal>shade</goal>
             </goals>
+            <configuration>
+              <relocations>
+                <relocation>
+                  <pattern>org.apache.commons.lang3</pattern>
+                  <shadedPattern>jp.azisaba.main.homogui.dependencies@lang3</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.reflections</pattern>
+                  <shadedPattern>jp.azisaba.main.homogui.dependencies@reflections</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>javassist</pattern>
+                  <shadedPattern>jp.azisaba.main.homogui.dependencies@javassist</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>com.google</pattern>
+                  <shadedPattern>jp.azisaba.main.homogui.dependencies@guava</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>me.rayzr522.jsonmessage</pattern>
+                  <shadedPattern>jp.azisaba.main.homogui.dependencies@jsonmessage</shadedPattern>
+                </relocation>
+              </relocations>
+            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -88,7 +112,7 @@
     <dependency>
       <groupId>net.azisaba</groupId>
       <artifactId>HomoSystem</artifactId>
-      <version>1.1.5-beta</version>
+      <version>1.1.6-beta</version>
       <scope>provided</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
@@ -96,12 +120,12 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.github.MilkBowl</groupId>
       <artifactId>VaultAPI</artifactId>
       <version>1.7</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.reflections</groupId>
