--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: HomoGUI
+name: ${project.name}
 main: jp.azisaba.main.homogui.HomoGUI
-version: 1.1.3
+version: ${project.version}
 author: siloneco
 description: "Homo gui plugin"
 api-version: 1.13
